<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.uic.prelimexam.tuco.whoru.Main">

    <ImageView
        android:id="@+id/backg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/bacgr"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/background" />

    <com.jetradarmobile.snowfall.SnowfallView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:snowflakeAlphaMax="255"
        app:snowflakeAlphaMin="150"
        app:snowflakeAngleMax="5"
        app:snowflakeImage="@drawable/snowflake"
        app:snowflakesAlreadyFalling="false"
        app:snowflakesFadingEnabled="true"
        app:snowflakeSizeMax="32dp"
        app:snowflakeSizeMin="8dp"
        app:snowflakeSpeedMax="12"
        app:snowflakeSpeedMin="4"
        app:snowflakesNum="250"
        />

    <EditText
        android:id="@+id/editText_username"
        android:layout_width="250sp"
        android:layout_height="wrap_content"
        android:layout_marginStart="70dp"
        android:layout_marginTop="217dp"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        android:textColor="@android:color/background_dark"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/backg"
        app:layout_constraintEnd_toStartOf="@+id/backg"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <Button
        android:id="@+id/button_result"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="365dp"
        android:background="@drawable/buttono"
        android:text="@string/result"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/Menu"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="455dp"
        android:background="@drawable/buttono"
        android:text="@string/menu"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/button_start"
        android:layout_width="150sp"
        android:layout_height="50sp"
        android:layout_marginStart="105dp"
        android:layout_marginTop="270dp"
        android:background="@drawable/buttono"
        android:text="@string/start"
        android:textColor="@android:color/background_dark"
        android:textSize="16sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
